2003-02-25  John Levon  <levon@movementarian.org>

	* ispell.C: give the forked command a more accurate name

2003-02-22  John Levon  <levon@movementarian.org>

	* toc.h:
	* toc.C: make TocItem store an id not a Paragraph *
	  (bug #913)

2003-02-21  Angus Leeming  <leeming@lyx.org>

	* commandtags.h: Retire LFUN_CITATION_INSERT, LFUN_CITATION_CREATE,
	LFUN_INSERT_BIBTEX, LFUN_BIBTEX_STYLE, LFUN_BIBDB_ADD, LFUN_BIBDB_DEL.
	Bring to life LFUN_DIALOG_SHOW_NEW_INSET, LFUN_DIALOG_SHOW_NEXT_INSET,
	LFUN_DIALOG_UPDATE, LFUN_DIALOG_HIDE, LFUN_DIALOG_DISCONNECT_INSET,
	LFUN_BIBITEM_APPLY, LFUN_BIBTEX_APPLY, LFUN_CITATION_APPLY,
	LFUN_INDEX_APPLY, LFUN_REF_APPLY, LFUN_TOC_APPLY, LFUN_URL_APPLY,

	* BufferView_pimpl.C (dispatch):
	* LyXAction.C (init):
	* factory.C (createInset):
	* lyxfunc.C (getStatus, dispatch):
	* text3.C (dispatch): retire old LFUNs and bring new ones to life.
	
2003-02-21  Angus Leeming  <leeming@lyx.org>

	* BufferView_pimpl.C (MenuInsertLyXFile):
	* lyx_cb.C (WriteAs, getContentsOfAsciiFile):
	* lyxfunc.C (menuNew, open, doImport):
	no longer pass a LyXView & to fileDlg.

2003-02-21  Angus Leeming  <leeming@lyx.org>

	* BufferView_pimpl.C: replace insetbib.h with insetbibtex.h.
	* LyXAction.C: change, BIBKEY to BIBITEM.
	* buffer.C: replace insetbib.h with insetbibitem.h and insetbibtex.h.
	Change InsetBibKey to InsetBibitem.
	Change BIBKEY_CODE to BIBITEM_CODE.
	* commandtags.h: change LFUN_INSERT_BIBKEY to LFUN_INSERT_BIBITEM.
	* factory.C: replace insetbib.h with insetbibitem.h.
	Change LFUN_INSERT_BIBKEY to LFUN_INSERT_BIBITEM.
	* paragraph.C: replace insetbib.h with insetbibitem.h.
	* paragraph.[Ch]: change InsetBibKey to InsetBibitem.
	Change bibkey() to bibitem().
	* text.C: remove insetbib.h.
	* text2.C: replace insetbib.h with insetbibitem.h.
	change bibkey() to bibitem().
	* text3.C: remove insetbib.h.
	change LFUN_INSERT_BIBKEY to LFUN_INSERT_BIBITEM.

2003-02-18  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
